crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__layout_fit_boundaries__annotated_lambda_parameters.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
val short = { @Mark value: Int -> value }

val medium = { @Configured("moderate") value: MediumType -> value }

val long = { @AnnotationWithAnExceptionallyLongName(
    "an-exceptionally-long-argument"
  )
  value: LongType ->
  value
}

diagnostics:
(none)
