crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__layout_fit_boundaries__call_chain_single_argument.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.boundaries

fun boundary(source: Sequence<String>): List<String> =
  source.map { it.trim().lowercase().replace("-", "_").removePrefix("tmp_") }
    .filter { it.isNotEmpty() }
    .toList()

diagnostics:
(none)
