crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__layout_fit_boundaries__single_argument_call.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.boundaries

fun validate(name: String) {
  require(name.isNotBlank()) { "blank name" }
}

diagnostics:
(none)
