crates/jolt_kotlin_fmt/tests/snapshots/corpus__style__layout_fit_boundaries__when_branch_expression.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
package com.example.boundaries

fun branch(value: Int): String =
  when (value) {
    0 -> "zero"
    1 -> "one"
    else -> "value-${value.toString().padStart(4, '0')}"
  }

diagnostics:
(none)
